PostCSS config added. .babelrc replaced with programmatic Rollup config

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,9 @@
         "react"
     ],
     "rules": {
+        "react/jsx-uses-react": 1,
+        "react/jsx-uses-vars": 1,
+        "react/react-in-jsx-scope": 1,
         "indent": [
             "error",
             2
