Gulp config added to inject generated JS into an index HTML file template

--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "babel-preset-react": "^6.11.1",
     "cssnano": "^3.7.4",
     "eslint-plugin-react": "^6.2.0",
+    "gulp": "^3.9.1",
+    "gulp-inject": "^4.1.0",
+    "gulp-shell": "^0.5.2",
+    "gulp-webserver": "^0.9.1",
     "postcss-cssnext": "^2.8.0",
     "postcss-simple-vars": "^3.0.0",
     "rollup": "^0.35.2",
